--- a/Basic_Approach/requirements.txt
+++ b/Basic_Approach/requirements.txt
@@ -1,10 +1,12 @@
 nltk==3.3
-numpy==1.14.4
-pandas==0.23.0
+numpy==1.14.5
+pandas==0.23.2
+pkg-resources==0.0.0
 python-dateutil==2.7.3
-pytz==2018.4
-rake-nltk==1.0.3
+pytz==2018.5
+rake-nltk==1.0.4
 scikit-learn==0.19.1
 scipy==1.1.0
 six==1.11.0
 sklearn==0.0
+
